role-service/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
<<<<<<< HEAD
  name: role-test
=======
  name: role-dev
>>>>>>> dev
