role-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: role-service
  namespace: role-dev
spec:
  type: NodePort
  selector:
    app: role-service
  ports:
    - port: 80
      targetPort: 80
