role-service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "role-ingress"
  namespace: role-dev

spec:
  rules:
    - host:
      http:
        paths:
          - path: /role
            backend:
              serviceName: role-service
              servicePort: 80
